# linguaboost

./: .gitignore  README.md  app.json  package.json  pnpm-lock.yaml  turbo.json
apps/agent/: README.md  pyproject.toml
apps/agent/src/: agent_pb2.py  agent_pb2_grpc.py  main.py  server.py
apps/api/: .eslintcache  eslint.config.js  package.json  tsconfig.json
apps/api/src/: grpc-client.ts  index.ts  types.ts
apps/api/src/config/: env.ts
apps/api/src/lib/: auth.ts  trpc.ts
apps/desktop/: electron-builder.yml  electron.vite.config.1754399331950.mjs  electron.vite.config.ts  eslint.config.js  eslint.config.mjs  package.json  tsconfig.node.json  tsconfig.web.json
apps/desktop/src/main/: index.ts
apps/mobile/: .eslintcache  app.json  eslint.config.js  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/mobile/animations/: bounce.ts  pressableOpacity.ts
apps/mobile/app/: +not-found.tsx  _layout.tsx
apps/mobile/app/(app)/: _layout.tsx  index.tsx
apps/mobile/app/(auth)/: _layout.tsx  sign-in.tsx  sign-up.tsx
apps/mobile/app/(carousal)/: _layout.tsx  index.tsx
apps/mobile/components/: EditScreenInfo.tsx
apps/mobile/constants/: hexColors.ts  theme.ts  tintColor.ts
apps/mobile/hooks/: useClientOnlyValue.web.ts
apps/mobile/lib/: auth-client.ts
apps/mobile/providers/: ThemeProvider.tsx
apps/mobile/svg/: AIConversationIcon.tsx  PersonalizedLearningIcon.tsx  PronunciationIcon.tsx  index.ts
apps/web/: next.config.js  package.json
apps/web/app/: global-error.tsx  page.tsx
shared/proto/: agent.proto
(+15 files in other folders)
